--- a/style.css
+++ b/style.css
@@ -1,26 +1,161 @@
+body {
+  background-color: rgb(23, 32, 44);
+  color: white;
+  margin: 0;
+}
+
+i:hover {
+  cursor: pointer;
+}
+
 img {
   width: 50px;
 }
 
+input:focus {
+  outline: none;
+}
+
+button:focus {
+  outline: none;
+}
+
 .leftPanel {
-  border: solid 1px;
+  border: solid 1px rgb(56, 68, 77, 1);
+  border-top: none;
+  border-bottom: none;
+  min-height: 100vh;
+  padding-left: 10%;
 }
 
 .centerPanel {
-  border: solid 1px;
-  padding-top: 30px;
+  min-height: 100vh;
+  padding: 0;
 }
 
 .rightPanel {
-  border: solid 1px;
+  border: solid 1px rgb(56, 68, 77, 1);
+  border-top: none;
+  border-bottom: none;
+  padding-right: 10%;
+}
+
+.centerPanelPost {
+  height: 50px;
+  display: flex;
+}
+
+.centerPanelInput {
+  padding: 0 15px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+#postInput {
+  background-color: transparent;
+  border: none;
+  padding-left: 10px;
+  color: white;
+  font-size: 19px;
+  width: 600px;
 }
 
 .post {
-  border: solid 1px;
-  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px rgb(56, 68, 77, 1);
+  border-left: none;
+  border-right: none;
+  border-bottom: solid 10px #2c364b;
+  height: 180px;
+  padding: 15px 15px 0 15px;
+}
+
+.profilePic {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-image: url("images/profile.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.privacySettingPost {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  font-size: 12px;
+  font-weight: bold;
+  color: rgba(29, 161, 242, 1);
+  margin: 0 80px;
 }
 
 .postFunction {
+  height: 100px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  margin-left: 80px;
+  color: rgba(29, 161, 242, 1);
+  border-top: solid 1px rgb(56, 68, 77, 1);
+}
+
+.tweetButton {
+  height: 40px;
+  width: 80px;
+  border-radius: 30px;
+  color: white;
+  background-color: rgba(29, 161, 242, 1);
+  border: none;
+}
+
+.retweet {
+  background-color: transparent;
+  border-radius: 0;
+}
+
+.centerPanelHeader {
+  height: 55px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 15px;
+}
+
+.leftPanelHeader {
+  height: 55px;
+  display: flex;
+  align-items: center;
+}
+
+.rightPanelHeader {
+  height: 55px;
+  display: flex;
+  align-items: center;
+}
+
+.rightPanelInput {
+  display: flex;
+  align-items: center;
+  width: 350px;
+  height: 40px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: rgba(39, 60, 82, 0.842);
+  color: rgba(134, 151, 164, 1);
+}
+
+.searchTwitter {
+  background-color: transparent;
+  border: none;
+  padding-left: 10px;
+  color: white;
+}
+
+::placeholder {
+  color: rgba(134, 151, 164, 1);
+  opacity: 1;
 }
