--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ button:focus {
   outline: none;
 }
 
-.profileImg {
+img {
   width: 50px;
 }
 
@@ -24,20 +24,65 @@ button:focus {
   border: solid 1px rgb(108, 117, 125, 1);
   border-top: none;
   border-bottom: none;
-  min-height: 100vh;
-  padding-left: 10%;
+  padding-left: 18%;
 }
 
 .centerPanel {
-  min-height: 100vh;
   padding: 0;
 }
 
 .rightPanel {
   border: solid 1px rgb(108, 117, 125, 1);
   border-top: none;
+  border-right: none;
   border-bottom: none;
   padding-right: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.follow {
+  margin-top: 30px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(39, 60, 82, 0.842);
+  font-size: 12px;
+}
+
+.followHeader {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: solid 1px rgba(134, 151, 164, 1);
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.followSubject {
+  display: flex;
+  flex-direction: row;
+  padding: 15px 0;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom: solid 1px rgba(134, 151, 164, 1);
+}
+
+.followButton {
+  background-color: transparent;
+  border: solid 1px rgba(29, 161, 242, 1);
+  height: 30px;
+  width: 60px;
+  color: white;
+  border-radius: 30px;
+}
+
+.followFooter {
+  display: flex;
+  align-items: flex-end;
+  padding-top: 10px;
+  font-size: 14px;
+  color: rgba(29, 161, 242, 1);
 }
 
 .centerPanelPost {
@@ -67,18 +112,9 @@ button:focus {
   border: solid 1px rgb(108, 117, 125, 1);
   border-left: none;
   border-right: none;
-  border-bottom: solid 10px #2c364b;
+  border-bottom: solid 10px #606d88;
   height: 180px;
   padding: 15px 15px 0 15px;
-}
-
-.profilePic {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  background-image: url("images/profile.png");
-  background-position: center;
-  background-size: cover;
 }
 
 .privacySettingPost {
@@ -98,15 +134,24 @@ button:focus {
   justify-content: space-between;
   margin-left: 80px;
   color: rgba(29, 161, 242, 1);
-  border-top: solid 1px rgb(56, 68, 77, 1);
+  border-top: solid 1px rgb(81, 99, 112);
 }
 
-.tweetButton {
+#tweetButton {
   height: 40px;
   width: 80px;
   border-radius: 30px;
   color: white;
   background-color: rgba(29, 161, 242, 1);
+  border: none;
+}
+
+#tweetButton:disabled {
+  height: 40px;
+  width: 80px;
+  border-radius: 30px;
+  color: rgb(189, 189, 189);
+  background-color: rgba(29, 160, 242, 0.76);
   border: none;
 }
 
@@ -157,6 +202,34 @@ button:focus {
   height: 55px;
   display: flex;
   align-items: center;
+  margin-bottom: 30px;
+}
+
+.leftPanelContent {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.leftPanelFooter {
+  margin-top: 30px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.leftInfo:hover {
+  border: 30px;
+  color: rgba(29, 161, 242, 1);
+  cursor: pointer;
+}
+
+.leftPanelFooter:hover {
+  background-color: rgba(39, 60, 82, 0.842);
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 .rightPanelHeader {
