--- a/style.css
+++ b/style.css
@@ -1,305 +1,28 @@
-body {
-  background-color: rgb(23, 32, 44);
-  color: white;
-  margin: 0;
-}
-
-i:hover {
-  cursor: pointer;
-}
-
-input:focus {
-  outline: none;
-}
-
-button:focus {
-  outline: none;
-}
-
 img {
   width: 50px;
 }
 
 .leftPanel {
-  border-top: none;
-  border-bottom: none;
-  padding-left: 20%;
+  border: solid 1px;
 }
 
 .centerPanel {
-  padding: 0;
-  border-left: solid 1px rgb(108, 117, 125, 1);
-  border-right: solid 1px rgb(108, 117, 125, 1);
+  border: solid 1px;
+  padding-top: 30px;
 }
 
 .rightPanel {
-  border-top: none;
-  border-right: none;
-  border-bottom: none;
-  padding: 0 15% 0 30px;
-  display: flex;
-  flex-direction: column;
-}
-
-.follow {
-  margin-top: 30px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(39, 60, 82, 0.842);
-  font-size: 12px;
-  border-radius: 15px;
-}
-
-.followHeader {
-  display: flex;
-  align-items: center;
-  padding-bottom: 10px;
-  border-bottom: solid 1px rgba(134, 151, 164, 1);
-  font-size: 19px;
-  font-weight: bold;
-}
-
-.followSubject {
-  display: flex;
-  flex-direction: row;
-  padding: 15px 0;
-  justify-content: space-evenly;
-  align-items: center;
-  border-bottom: solid 1px rgba(134, 151, 164, 1);
-}
-
-.followButton {
-  background-color: transparent;
-  border: solid 1px rgba(29, 161, 242, 1);
-  height: 30px;
-  width: 60px;
-  color: white;
-  border-radius: 30px;
-}
-
-.followFooter {
-  display: flex;
-  align-items: flex-end;
-  padding-top: 10px;
-  font-size: 14px;
-  color: rgba(29, 161, 242, 1);
-}
-
-.trendingList {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-  background-color: rgba(39, 60, 82, 0.842);
-  font-size: 12px;
-}
-
-.trendingSubject {
-  display: flex;
-  flex-direction: column;
-  padding: 15px 0;
-  justify-content: space-evenly;
-  align-items: center;
-  border-bottom: solid 1px rgba(134, 151, 164, 1);
-}
-
-.trendingHead {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  color: rgba(134, 151, 164, 1);
-}
-
-.trendingContent {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 20px;
-  margin-bottom: 0;
-}
-
-.centerPanelPost {
-  height: 50px;
-  display: flex;
-}
-
-.centerPanelInput {
-  padding: 0 15px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-}
-
-#postInput {
-  background-color: transparent;
-  border: none;
-  padding-left: 10px;
-  color: white;
-  font-size: 19px;
-  width: 600px;
+  border: solid 1px;
 }
 
 .post {
-  display: flex;
-  flex-direction: column;
-  border: solid 1px rgb(108, 117, 125, 1);
-  border-left: none;
-  border-right: none;
-  border-bottom: solid 10px #606d88;
-  height: 180px;
-  padding: 15px 15px 0 15px;
-}
-
-.privacySettingPost {
-  display: flex;
-  align-items: center;
-  height: 50px;
-  font-size: 12px;
-  font-weight: bold;
-  color: rgba(29, 161, 242, 1);
-  margin: 0 80px;
+  border: solid 1px;
+  margin-bottom: 30px;
 }
 
 .postFunction {
-  height: 100px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  margin-left: 80px;
-  color: rgba(29, 161, 242, 1);
-  border-top: solid 1px rgb(81, 99, 112);
-}
-
-#tweetButton {
-  height: 40px;
-  width: 80px;
-  border-radius: 30px;
-  color: white;
-  background-color: rgba(29, 161, 242, 1);
-  border: none;
-}
-
-#tweetButton:disabled {
-  height: 40px;
-  width: 80px;
-  border-radius: 30px;
-  color: rgb(189, 189, 189);
-  background-color: rgba(29, 160, 242, 0.76);
-  border: none;
-}
-
-.tweet {
-  background-color: transparent;
-  border-radius: 0;
-}
-
-.tweetHeader {
-  display: flex;
-  flex-direction: row;
-}
-
-.timePost {
-  display: flex;
-  align-items: center;
-}
-
-.username {
-  padding: 0 15px;
-  display: flex;
-  align-items: center;
-}
-
-.tweetContent {
-  margin-left: 80px;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.tweetFunction {
-  display: flex;
-  justify-content: space-around;
-  margin-left: 80px;
-  padding-top: 0;
-}
-
-.centerPanelHeader {
-  height: 55px;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 0 15px;
-}
-
-.leftPanelHeader {
-  height: 55px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.leftPanelContent {
-  font-size: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.leftPanelFooter {
-  margin-top: 30px;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-}
-
-.leftInfo {
-  margin-bottom: 30px;
-}
-
-.leftInfo:hover {
-  border: 30px;
-  color: rgba(29, 161, 242, 1);
-  cursor: pointer;
-}
-
-.leftPanelFooter:hover {
-  background-color: rgba(39, 60, 82, 0.842);
-  border-radius: 30px;
-  cursor: pointer;
-}
-
-.rightPanelHeader {
-  height: 55px;
-  display: flex;
-  align-items: center;
-}
-
-.rightPanelInput {
-  display: flex;
-  align-items: center;
-  width: 350px;
-  height: 40px;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 30px;
-  background-color: rgba(39, 60, 82, 0.842);
-  color: rgba(134, 151, 164, 1);
-}
-
-.searchTwitter {
-  background-color: transparent;
-  border: none;
-  padding-left: 10px;
-  color: white;
-}
-
-::placeholder {
-  color: rgba(134, 151, 164, 1);
-  opacity: 1;
 }
 
 /** Comment section*/
